--- a/binary_file_parser.ipynb
+++ b/binary_file_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "import os\n",
     "import numpy as np\n",
     "from PIL import Image, ImageDraw, ImageFilter\n",
+    "from IPython.display import clear_output\n",
     "import shutil\n",
     "\n",
     "\n",
@@ -76,7 +77,7 @@
     "    try:    os.mkdir(f\"{savedir}\")\n",
     "    except: pass\n",
     "    for idx, drawing in enumerate(unpack_drawings(filedir)):\n",
-    "        if drawing['recognized']:        \n",
+    "        if drawing['recognized'] and os.path.exists(f\"{savedir}\") == False:        \n",
     "            img = draw_from_vectors(Image.new('1', (256, 256), color=0), drawing['image'])\n",
     "            img.save(f\"{savedir}\\\\{idx}.png\", \"PNG\")\n",
     "            img.close()\n",
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,19 +105,27 @@
     "    # savedir_ext = \"//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png\"\n",
     "\n",
     "    # PC ONLY\n",
-    "    # filedir = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_TESTING\"\n",
-    "    # savedir = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_png\"\n",
+    "    filedir = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_TESTING\"\n",
+    "    savedir = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_png\"\n",
     "\n",
     "    # LAPTOP ONLY\n",
-    "    filedir = \"E:\\Cempos python scripts\\Doodles\\quickdraw_dataset\"\n",
-    "    savedir = \"E:\\Cempos python scripts\\Doodles\\quickdraw_dataset_png\"\n"
+    "    # filedir = \"E:\\Cempos python scripts\\Doodles\\quickdraw_dataset\"\n",
+    "    # savedir = \"E:\\Cempos python scripts\\Doodles\\quickdraw_dataset_png\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bandage\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "\n",
@@ -125,35 +134,15 @@
     "            ch = 'b'\n",
     "            filepath = os.path.join(root, file)\n",
     "            label = file.replace('full_binary_', '').replace('.bin', '')\n",
+    "\n",
+    "            clear_output(wait=True)\n",
+    "            print(label)\n",
+    "            \n",
     "            bin_to_img(filepath, f\"{savedir}\\{label}\\\\\")\n",
     "            if label[0] == ch:\n",
-    "                clear_output(wait=True)\n",
-    "                print(label)\n",
     "                ch = chr(ord(ch) + 1)\n",
     "                if ch == 'g': break\n",
-    "\n",
     "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label = \"aircraft carrier\"\n",
-    "shutil.move(f\"{savedir}\\{label}\", f\"{savedir_ext}\\{label}\")\n",
-    "# 48min wtf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = 'a'\n",
-    "c"
    ]
   }
  ],
