create_address_list_txt.ipynb now also creates label list

--- a/create_address_txt.ipynb
+++ b/create_address_txt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,26 @@
     "with open('address_list.txt', 'w') as f:\n",
     "    for address in addresses:\n",
     "        f.write(f\"{address}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filedir = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_png\"\n",
+    "\n",
+    "labels = []\n",
+    "for root, dirs, files in os.walk(filedir):\n",
+    "        for dir in dirs:\n",
+    "            labels.append(dir)\n",
+    "\n",
+    "labels = natsorted(labels, alg=ns.IGNORECASE)\n",
+    "\n",
+    "with open('label_list.txt', 'w') as f:\n",
+    "    for label in labels:\n",
+    "        f.write(f\"{label}\\n\")"
    ]
   }
  ],
