--- a/binary_file_parser.ipynb
+++ b/binary_file_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,27 +105,19 @@
     "    # savedir_ext = \"//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png\"\n",
     "\n",
     "    # PC ONLY\n",
-    "    filedir = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_TESTING\"\n",
-    "    savedir = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_png\"\n",
+    "    # filedir = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_TESTING\"\n",
+    "    # savedir = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_png\"\n",
     "\n",
     "    # LAPTOP ONLY\n",
-    "    # filedir = \"E:\\Cempos python scripts\\Doodles\\quickdraw_dataset\"\n",
-    "    # savedir = \"E:\\Cempos python scripts\\Doodles\\quickdraw_dataset_png\"\n"
+    "    filedir = \"E:\\Cempos python scripts\\Wonky-Doodles\\quickdraw_dataset_TESTING\"\n",
+    "    savedir = \"E:\\Cempos python scripts\\Wonky-Doodles\\quickdraw_dataset_png\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bandage\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "\n",
@@ -162,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
