changed filedir to be universal

--- a/create_address_txt.ipynb
+++ b/create_address_txt.ipynb
@@ -9,7 +9,7 @@
     "import os\n",
     "from natsort import natsorted, ns\n",
     "\n",
-    "filedir = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_png\"\n",
+    "filedir = \".\\quickdraw_dataset_png\"\n",
     "\n",
     "addresses = []\n",
     "for root, dirs, files in os.walk(filedir):\n",
