create_add_txt now supports a limiter by idx

--- a/create_address_txt.ipynb
+++ b/create_address_txt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,12 @@
     "\n",
     "addresses = []\n",
     "for root, dirs, files in os.walk(filedir):\n",
-    "        for file in files:\n",
+    "        limiter = len(files)/6\n",
+    "        files = natsorted(files, alg=ns.IGNORECASE)\n",
+    "        for idx, file in enumerate(files):\n",
     "            addresses.append(os.path.join(root, file))\n",
-    "\n",
-    "addresses = natsorted(addresses, alg=ns.IGNORECASE)\n",
-    "\n",
+    "            if idx > limiter: break\n",
+    "            \n",
     "with open('address_list.txt', 'w') as f:\n",
     "    for address in addresses:\n",
     "        f.write(f\"{address}\\n\")"
@@ -29,6 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from natsort import natsorted, ns\n",
+    "\n",
+    "filedir = \".\\quickdraw_dataset_png\"\n",
+    "\n",
     "labels = []\n",
     "for root, dirs, files in os.walk(filedir):\n",
     "        for dir in dirs:\n",
