RecognitionNN should now run properly

--- a/RecognitionNN.ipynb
+++ b/RecognitionNN.ipynb
@@ -41,12 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e29e1f0d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA is available: True\n",
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "### ALL THE IMPORTS ###\n",
     "#######################\n",
@@ -112,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b92c995c",
    "metadata": {},
    "outputs": [],
@@ -124,17 +133,15 @@
     "        # Adapter from your Dataset to Dataloader and thus specific for each Dataset.\n",
     "        # Microsoft Defender might slow things down here significantly. Take a look at your task manager.\n",
     "\n",
-    "        datapath = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_png\"\n",
-    "        train_test_ratio = 0.01                                     # define ratio of train/total samples\n",
+    "        datapath = \".\\quickdraw_dataset_png\"\n",
+    "        train_test_ratio = 0.80                                     # define ratio of train/total samples\n",
     "\n",
     "\n",
     "        ID_list = []\n",
     "        counter = 0\n",
-    "        for root, dirs, files in os.walk(datapath):\n",
-    "                for idx, file in enumerate(files):\n",
-    "                        ID_list.append(idx + counter)\n",
-    "                counter += len(files)\n",
-    "        del counter\n",
+    "        with open('address_list.txt') as f:\n",
+    "                for idx, line in enumerate(f):\n",
+    "                        ID_list.append(idx)\n",
     "\n",
     "        label_list = []\n",
     "        with open('label_list.txt') as f:\n",
@@ -151,10 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7c37846c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "##### DATALOADER #####\n",
     "###### - 0.2 - #######\n",
@@ -167,14 +182,14 @@
     "    batches_trn = DataLoader(dataset = quickdraw_trn,                    # samples input\n",
     "                        batch_size = batch_size,\n",
     "                        shuffle = False,                           # no need to shuffle, we already did that\n",
-    "                        num_workers = 4,                           # strongly recommended to keep = 0\n",
+    "                        num_workers = 6,                           # strongly recommended to keep = 0\n",
     "                        persistent_workers = True,\n",
     "                        pin_memory = True)                         # prevent loading into memory after every epoch\n",
     "\n",
     "    batches_tst = DataLoader(dataset = quickdraw_tst,\n",
     "                        batch_size = batch_size,\n",
     "                        shuffle = False,\n",
-    "                        num_workers = 4,\n",
+    "                        num_workers = 6,\n",
     "                        persistent_workers = True,\n",
     "                        pin_memory = True)\n",
     "\n",
@@ -183,10 +198,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "569b82f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\cempos python scripts\\machine learning\\Doodles\\RecognitionNN_utils.py:105: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  return ((tc.tensor(input_dim) - tc.tensor(kernel_size) + 2*tc.tensor(padding)) / (tc.tensor(stride))) + 1\n"
+     ]
+    }
+   ],
    "source": [
     "##### DEFINE MODEL ####\n",
     "######## - 1 - ########\n",
@@ -223,29 +254,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "aa328f92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done. Final Cost: 0.006051. Time: 778.06s.\n"
+     ]
+    }
+   ],
    "source": [
     "###### TRAINING #######\n",
     "######## - 3 - ########\n",
     "if __name__ == \"__main__\":\n",
     "\n",
     "    # Optional Block for using tensorboard\n",
-    "    tb_analytics = False\n",
+    "    tb_analytics = True\n",
     "\n",
     "\n",
     "    if tb_analytics:\n",
     "        logdir = f\"./runs/{dir_counter}/\"\n",
     "        writer = SummaryWriter(logdir)\n",
-    "        utils.tb_write_model(model, batches_trn)\n",
+    "        utils.tb_write_model(model, quickdraw_trn)\n",
     "        dir_counter += 1\n",
     "\n",
     "\n",
     "    # Training Loop. \n",
     "    # Note that loading the batches into memory might take a few minutes. Take a look at your task manager.\n",
-    "    model_trn = utils.training_loop(n_epochs = 1,                             # See func definition for input details\n",
+    "    model_trn = utils.training_loop(n_epochs = 2,                             # See func definition for input details\n",
     "                            print_fps = 5.,\n",
     "                            model = model,\n",
     "                            batches_trn = batches_trn,\n",
@@ -257,10 +296,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cfd2597b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done. Final Accuracy: 97.67 %. Time: 157.41s.\n"
+     ]
+    }
+   ],
    "source": [
     "####### TESTING #######\n",
     "######## - 4 - ########\n",
@@ -270,7 +317,6 @@
     "    # Again, loading batches into memory may take a few minutes. Stay strong.\n",
     "\n",
     "    # device = tc.device(\"cpu\")                                           # optional, but runs faster on cpu for some reason\n",
-    "    pool = Pool()\n",
     "    accuracy = utils.validation_loop(print_fps = 5.,                          # See func definition for input details\n",
     "                            print_miss = False,\n",
     "                            model = model_trn.to(device),\n",
@@ -285,10 +331,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "00bc1d55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "##### SAVE MODEL ######\n",
     "######## - 5 - ########\n",
@@ -296,7 +350,7 @@
     "\n",
     "    # Set filepath and model name\n",
     "    filepath = './'\n",
-    "    model_name = 'Tutorial_CNN'\n",
+    "    model_name = 'Wonky_Doodles_CNN'\n",
     "\n",
     "    tc.save(model_trn, f\"{filepath}{model_name}.pth\")                               # Save the whole model and/or...\n",
     "    tc.save(model_trn.state_dict(), f\"{filepath}{model_name}_state_dict.pth\")       # ...save only the the model state\n",
