doodle_draw now recognizes your drawing!

--- a/doodle_draw.ipynb
+++ b/doodle_draw.ipynb
@@ -2,14 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA is available: True\n"
+     ]
+    }
+   ],
    "source": [
     "from tkinter import *\n",
     "from PIL import Image, ImageDraw\n",
     "import math\n",
+    "import itertools\n",
     "\n",
+    "# PyTorch imports\n",
+    "import torch as tc\n",
+    "\n",
+    "# CUDA\n",
+    "if tc.cuda.is_available():\n",
+    "    device = tc.device(\"cuda\")\n",
+    "else:\n",
+    "    device = tc.device(\"cpu\")\n",
+    "\n",
+    "device = tc.device(\"cpu\")\n",
+    "\n",
+    "print(f\"CUDA is available: {tc.cuda.is_available()}\")\n",
     "\n",
     "stroke = []\n",
     "stroke_list = []\n",
@@ -102,6 +123,52 @@
     "    canvas.bind(\"<ButtonRelease-1>\", save_stroke)\n",
     "\n",
     "    app.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "banana: 98.1 %\n",
+      "aircraft carrier: 1.15 %\n",
+      "bandage: 0.75 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_category(line_idx, txt_path):\n",
+    "    with open(txt_path) as f:\n",
+    "                line = itertools.islice(f, line_idx, line_idx+1)\n",
+    "                line = map(lambda s: s.strip(), line)\n",
+    "                return list(line)[0]\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    with tc.no_grad():\n",
+    "\n",
+    "        filepath = './'\n",
+    "        filename = \"Wonky_Doodles_CNN.pth\"\n",
+    "        model = tc.load(f\"{filepath}{filename}\").to(device)\n",
+    "\n",
+    "        img = Image.open('canvas.png')\n",
+    "        tns = transforms.ToTensor()(img).to(device)\n",
+    "        otpt = tc.softmax(model(tns)[0], dim = 0)\n",
+    "\n",
+    "        prob_list = []\n",
+    "        for idx, category in enumerate(otpt):\n",
+    "            # print(f\"{get_category(idx, 'label_list.txt')} {100 * category:.2f} %\")\n",
+    "            prob_list.append((get_category(idx, 'label_list.txt'), round(100 * category.item(), 2)))\n",
+    "            if idx > 9: break\n",
+    "        prob_list.sort(key=lambda x: x[1], reverse=True)\n",
+    "        for category in prob_list:\n",
+    "            print(f\"{category[0]}: {category[1]} %\")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
