--- a/doodle_draw.ipynb
+++ b/doodle_draw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -18,6 +18,7 @@
     "from PIL import Image, ImageDraw\n",
     "import math\n",
     "import itertools\n",
+    "from IPython.display import clear_output\n",
     "\n",
     "# PyTorch imports\n",
     "import torch as tc\n",
@@ -34,6 +35,10 @@
     "\n",
     "stroke = []\n",
     "stroke_list = []\n",
+    "\n",
+    "filepath = './'\n",
+    "filename = \"Wonky_Doodles_CNN.pth\"\n",
+    "model = tc.load(f\"{filepath}{filename}\").to(device)\n",
     "\n",
     "\n",
     "def perpendicularDistance(point, line):\n",
@@ -97,16 +102,52 @@
     "    \n",
     "    stroke = DouglasPeucker(stroke, epsilon)\n",
     "    stroke_list.append(stroke)\n",
+    "    clear_output(wait=True)\n",
     "    ImageDraw.Draw(img).line(stroke, fill=1, width=1)\n",
     "    img.save(\"canvas.png\")\n",
-    "    stroke = []\n"
+    "\n",
+    "    eval_drawing(img, model)\n",
+    "\n",
+    "    stroke = []\n",
+    "\n",
+    "\n",
+    "def get_category(line_idx, txt_path):\n",
+    "    with open(txt_path) as f:\n",
+    "                line = itertools.islice(f, line_idx, line_idx+1)\n",
+    "                line = map(lambda s: s.strip(), line)\n",
+    "                return list(line)[0]\n",
+    "    \n",
+    "def eval_drawing(img, model):\n",
+    "    with tc.no_grad():\n",
+    "        # img = Image.open('canvas.png')\n",
+    "        tns = transforms.ToTensor()(img).to(device)\n",
+    "        otpt = tc.softmax(model(tns)[0], dim = 0)\n",
+    "\n",
+    "        prob_list = []\n",
+    "        for idx, category in enumerate(otpt):\n",
+    "            # print(f\"{get_category(idx, 'label_list.txt')} {100 * category:.2f} %\")\n",
+    "            prob_list.append((get_category(idx, 'label_list.txt'), round(100 * category.item(), 2)))\n",
+    "            if idx > 9: break\n",
+    "        prob_list.sort(key=lambda x: x[1], reverse=True)\n",
+    "        for category in prob_list:\n",
+    "            print(f\"{category[0]}: {category[1]} %\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aircraft carrier: 96.71 %\n",
+      "banana: 3.11 %\n",
+      "bandage: 0.17 %\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "\n",
@@ -141,32 +182,9 @@
     }
    ],
    "source": [
-    "def get_category(line_idx, txt_path):\n",
-    "    with open(txt_path) as f:\n",
-    "                line = itertools.islice(f, line_idx, line_idx+1)\n",
-    "                line = map(lambda s: s.strip(), line)\n",
-    "                return list(line)[0]\n",
-    "\n",
     "if __name__ == \"__main__\":\n",
     "\n",
-    "    with tc.no_grad():\n",
     "\n",
-    "        filepath = './'\n",
-    "        filename = \"Wonky_Doodles_CNN.pth\"\n",
-    "        model = tc.load(f\"{filepath}{filename}\").to(device)\n",
-    "\n",
-    "        img = Image.open('canvas.png')\n",
-    "        tns = transforms.ToTensor()(img).to(device)\n",
-    "        otpt = tc.softmax(model(tns)[0], dim = 0)\n",
-    "\n",
-    "        prob_list = []\n",
-    "        for idx, category in enumerate(otpt):\n",
-    "            # print(f\"{get_category(idx, 'label_list.txt')} {100 * category:.2f} %\")\n",
-    "            prob_list.append((get_category(idx, 'label_list.txt'), round(100 * category.item(), 2)))\n",
-    "            if idx > 9: break\n",
-    "        prob_list.sort(key=lambda x: x[1], reverse=True)\n",
-    "        for category in prob_list:\n",
-    "            print(f\"{category[0]}: {category[1]} %\")\n",
     "\n",
     "\n"
    ]
