doodle_draw bugfix

--- a/doodle_draw.ipynb
+++ b/doodle_draw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -22,6 +22,7 @@
     "\n",
     "# PyTorch imports\n",
     "import torch as tc\n",
+    "from torchvision import transforms\n",
     "\n",
     "# CUDA\n",
     "if tc.cuda.is_available():\n",
@@ -135,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aircraft carrier: 96.71 %\n",
-      "banana: 3.11 %\n",
-      "bandage: 0.17 %\n"
+      "aircraft carrier: 90.49 %\n",
+      "banana: 4.85 %\n",
+      "bandage: 4.66 %\n"
      ]
     }
    ],
