--- a/create_address_txt.ipynb
+++ b/create_address_txt.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from natsort import natsorted, ns\n",
     "\n",
-    "filedir = \".\\quickdraw_dataset_png\"\n",
+    "# filedir = \".\\quickdraw_dataset_png\"\n",
+    "filedir = '//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png'\n",
     "\n",
     "addresses = []\n",
     "for root, dirs, files in os.walk(filedir):\n",
