create address txt is way more efiicient

--- a/create_address_txt.ipynb
+++ b/create_address_txt.ipynb
@@ -2,32 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from natsort import natsorted, ns\n",
-    "\n",
-    "# filedir = \".\\quickdraw_dataset_png\"\n",
-    "filedir = '//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png'\n",
-    "\n",
-    "addresses = []\n",
-    "for root, dirs, files in os.walk(filedir):\n",
-    "        limiter = len(files)/6\n",
-    "        files = natsorted(files, alg=ns.IGNORECASE)\n",
-    "        for idx, file in enumerate(files):\n",
-    "            addresses.append(os.path.join(root, file))\n",
-    "            if idx > limiter: break\n",
-    "            \n",
-    "with open('address_list.txt', 'w') as f:\n",
-    "    for address in addresses:\n",
-    "        f.write(f\"{address}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,17 +10,35 @@
     "from natsort import natsorted, ns\n",
     "\n",
     "filedir = \".\\quickdraw_dataset_png\"\n",
-    "\n",
-    "labels = []\n",
-    "for root, dirs, files in os.walk(filedir):\n",
-    "        for dir in dirs:\n",
-    "            labels.append(dir)\n",
-    "\n",
-    "labels = natsorted(labels, alg=ns.IGNORECASE)\n",
-    "\n",
+    "# filedir = '//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('address_list.txt', 'w') as f:\n",
+    "    for root, dirs, files in os.walk(filedir):\n",
+    "            limiter = len(files)/6\n",
+    "            files = natsorted(files, alg=ns.IGNORECASE)\n",
+    "            for idx, file in enumerate(files):\n",
+    "                f.write(f\"{os.path.join(root, file)}\\n\")\n",
+    "                if idx > limiter: break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open('label_list.txt', 'w') as f:\n",
-    "    for label in labels:\n",
-    "        f.write(f\"{label}\\n\")"
+    "    for root, dirs, files in os.walk(filedir):\n",
+    "        dirs = natsorted(dirs, alg=ns.IGNORECASE)\n",
+    "        for dir in dirs:\n",
+    "            f.write(f\"{dir}\\n\")"
    ]
   }
  ],
