--- a/binary_file_parser.ipynb
+++ b/binary_file_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
     "    try:    os.mkdir(f\"{savedir}\")\n",
     "    except: pass\n",
     "    for idx, drawing in enumerate(unpack_drawings(filedir)):\n",
-    "        if drawing['recognized'] and os.path.exists(f\"{savedir}\") == False:        \n",
+    "        if drawing['recognized']:        \n",
     "            img = draw_from_vectors(Image.new('1', (256, 256), color=0), drawing['image'])\n",
     "            img.save(f\"{savedir}\\\\{idx}.png\", \"PNG\")\n",
     "            img.close()\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,12 +105,15 @@
     "    # savedir_ext = \"//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png\"\n",
     "\n",
     "    # PC ONLY\n",
-    "    # filedir = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_TESTING\"\n",
-    "    # savedir = \"D:\\cempos python scripts\\machine learning\\Doodles\\quickdraw_dataset_png\"\n",
+    "    filedir = \"./quickdraw_dataset\"\n",
+    "    savedir = \"./quickdraw_dataset_pth\"\n",
     "\n",
     "    # LAPTOP ONLY\n",
-    "    filedir = \"E:\\Cempos python scripts\\Wonky-Doodles\\quickdraw_dataset_TESTING\"\n",
-    "    savedir = \"E:\\Cempos python scripts\\Wonky-Doodles\\quickdraw_dataset_png\"\n"
+    "    # filedir = \"E:\\Cempos python scripts\\Wonky-Doodles\\quickdraw_dataset_TESTING\"\n",
+    "    # savedir = \"E:\\Cempos python scripts\\Wonky-Doodles\\quickdraw_dataset_png\"\n",
+    "\n",
+    "    try: os.makedirs(savedir)\n",
+    "    except: pass\n"
    ]
   },
   {
@@ -121,9 +124,10 @@
    "source": [
     "if __name__ == \"__main__\":\n",
     "\n",
+    "    ch = 'b'\n",
     "    for root, dirs, files in os.walk(filedir):\n",
     "        for file in files:\n",
-    "            ch = 'b'\n",
+    "            \n",
     "            filepath = os.path.join(root, file)\n",
     "            label = file.replace('full_binary_', '').replace('.bin', '')\n",
     "\n",
@@ -135,6 +139,41 @@
     "                ch = chr(ord(ch) + 1)\n",
     "                if ch == 'g': break\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./quickdraw_dataset/full_binary_aircraft carrier.bin\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    ch = 'a'\n",
+    "    files = os.listdir(filedir)\n",
+    "    for file in files:\n",
+    "        filepath = f\"{filedir}/{file}\"\n",
+    "        label = file.replace('full_binary_', '').replace('.bin', '')\n",
+    "\n",
+    "        if label[0] == ch:\n",
+    "            ch = chr(ord(ch) + 1)\n",
+    "            if ch == 'g': break\n",
+    "\n",
+    "        clear_output(wait=True)\n",
+    "        print(label)\n",
+    "\n",
+    "        bin_to_img(filepath, f\"{savedir}\\{label}\\\\\")\n",
+    "\n",
+    "                \n",
+    "\n"
    ]
   }
  ],
@@ -154,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
