new structure for faster reading from disk

--- a/create_address_txt.ipynb
+++ b/create_address_txt.ipynb
@@ -2,43 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "from itertools import islice\n",
+    "from IPython.display import clear_output\n",
     "from natsort import natsorted, ns\n",
     "\n",
-    "filedir = \".\\quickdraw_dataset_png\"\n",
-    "# filedir = '//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png'\n"
+    "filedir = \"./quickdraw_dataset_png\"\n",
+    "# filedir = '//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png'\n",
+    "\n",
+    "limit_ratio = 1/6\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('address_list.txt', 'w') as f:\n",
-    "    for root, dirs, files in os.walk(filedir):\n",
-    "            limiter = len(files)/6\n",
-    "            files = natsorted(files, alg=ns.IGNORECASE)\n",
-    "            for idx, file in enumerate(files):\n",
-    "                f.write(f\"{os.path.join(root, file)}\\n\")\n",
-    "                if idx > limiter: break\n"
+    "for dir in os.listdir(filedir):\n",
+    "    clear_output(wait=True)\n",
+    "    print(dir)\n",
+    "    \n",
+    "    files = natsorted(os.listdir(f\"{filedir}/{dir}\"), alg=ns.IGNORECASE)\n",
+    "    dir_len = len(files)\n",
+    "    with open(f\"{filedir}/{dir}/address_list.txt\", 'w') as f:\n",
+    "        # f.write(f\"{filedir}/{dir}/{files[0]}\")\n",
+    "        for idx, file in enumerate(files[:dir_len-1]):\n",
+    "            f.write(f\"{filedir}/{dir}/{file}\\n\")\n",
+    "            if idx > dir_len * limit_ratio: break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "n_items = 0\n",
+    "dirs = os.listdir(filedir)\n",
     "with open('label_list.txt', 'w') as f:\n",
-    "    for root, dirs, files in os.walk(filedir):\n",
-    "        dirs = natsorted(dirs, alg=ns.IGNORECASE)\n",
-    "        for dir in dirs:\n",
-    "            f.write(f\"{dir}\\n\")"
+    "    for dir in dirs:\n",
+    "        with open(f\"{filedir}/{dir}/address_list.txt\") as g:\n",
+    "            n_items += len(g.readlines())\n",
+    "            f.write(f\"{dir}_{n_items}\\n\")"
    ]
   }
  ],
