--- a/RecognitionNN.ipynb
+++ b/RecognitionNN.ipynb
@@ -138,38 +138,54 @@
     "\n",
     "\n",
     "        ID_list = []\n",
-    "        counter = 0\n",
-    "        with open('address_list.txt') as f:\n",
-    "                for idx, line in enumerate(f):\n",
-    "                        ID_list.append(idx)\n",
+    "        ID = 0\n",
+    "        for dir in os.listdir(datapath):\n",
+    "                with open(f\"{datapath}/{dir}/address_list.txt\") as g:\n",
+    "                        for line in g:\n",
+    "                                ID_list.append(ID)\n",
+    "                                ID += 1\n",
     "\n",
-    "        label_list = []\n",
-    "        with open('label_list.txt') as f:\n",
-    "                for line in f:\n",
-    "                        label_list.append(line.rstrip())\n",
-    "\n",
-    "        quickdraw_dataset = utils.Quickdraw_Dataset(ID_list, label_list)\n",
+    "        quickdraw_dataset = utils.Quickdraw_Dataset(ID_list, datapath, \"label_list.txt\")\n",
     "        quickdraw_trn, quickdraw_tst = quickdraw_dataset.split_trn_tst(train_test_ratio)\n",
-    "\n",
+    "        \n",
+    "        del ID\n",
     "        del ID_list\n",
-    "        del label_list\n",
-    "        del quickdraw_dataset"
+    "        # del quickdraw_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7c37846c",
+   "execution_count": 4,
+   "id": "3286de85",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "quickdraw_dataset.ID_list[0]\n",
+    "# sample, label = quickdraw_dataset.__getitem__(12)\n",
+    "\n",
+    "# topil = tv.transforms.ToPILImage()\n",
+    "# img = topil(sample)\n",
+    "# img.show()\n",
+    "# print(quickdraw_dataset.label_list[np.argmax(label)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c37846c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "##### DATALOADER #####\n",
     "###### - 0.2 - #######\n",
@@ -183,14 +199,14 @@
     "                        batch_size = batch_size,\n",
     "                        shuffle = False,                           # no need to shuffle, we already did that\n",
     "                        num_workers = 6,                           # strongly recommended to keep = 0\n",
-    "                        persistent_workers = True,\n",
+    "                        persistent_workers = False,\n",
     "                        pin_memory = True)                         # prevent loading into memory after every epoch\n",
     "\n",
     "    batches_tst = DataLoader(dataset = quickdraw_tst,\n",
     "                        batch_size = batch_size,\n",
     "                        shuffle = False,\n",
     "                        num_workers = 6,\n",
-    "                        persistent_workers = True,\n",
+    "                        persistent_workers = False,\n",
     "                        pin_memory = True)\n",
     "\n",
     "    print('Done.')"
@@ -198,26 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "569b82f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\cempos python scripts\\machine learning\\Doodles\\RecognitionNN_utils.py:105: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  return ((tc.tensor(input_dim) - tc.tensor(kernel_size) + 2*tc.tensor(padding)) / (tc.tensor(stride))) + 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##### DEFINE MODEL ####\n",
     "######## - 1 - ########\n",
@@ -254,18 +254,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "aa328f92",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done. Final Cost: 0.006051. Time: 778.06s.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###### TRAINING #######\n",
     "######## - 3 - ########\n",
@@ -296,18 +288,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cfd2597b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done. Final Accuracy: 97.67 %. Time: 157.41s.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "####### TESTING #######\n",
     "######## - 4 - ########\n",
@@ -331,18 +315,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "00bc1d55",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##### SAVE MODEL ######\n",
     "######## - 5 - ########\n",
