--- a/RecognitionNN.ipynb
+++ b/RecognitionNN.ipynb
@@ -41,21 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e29e1f0d",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA is available: True\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### ALL THE IMPORTS ###\n",
     "#######################\n",
@@ -121,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b92c995c",
    "metadata": {},
    "outputs": [],
@@ -150,34 +141,22 @@
     "        \n",
     "        del ID\n",
     "        del ID_list\n",
-    "        # del quickdraw_dataset"
+    "        del quickdraw_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3286de85",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "quickdraw_dataset.ID_list[0]\n",
-    "# sample, label = quickdraw_dataset.__getitem__(12)\n",
+    "sample, label = quickdraw_dataset.__getitem__(45)\n",
     "\n",
-    "# topil = tv.transforms.ToPILImage()\n",
-    "# img = topil(sample)\n",
-    "# img.show()\n",
-    "# print(quickdraw_dataset.label_list[np.argmax(label)])"
+    "topil = tv.transforms.ToPILImage()\n",
+    "img = topil(sample)\n",
+    "img.show()\n",
+    "print(quickdraw_dataset.label_list[np.argmax(label)])"
    ]
   },
   {
