binary file parser now supports converting to torch tensor

--- a/binary_file_parser.ipynb
+++ b/binary_file_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,10 @@
     "import numpy as np\n",
     "from PIL import Image, ImageDraw, ImageFilter\n",
     "from IPython.display import clear_output\n",
-    "import shutil\n",
+    "from natsort import natsorted, ns\n",
+    "\n",
+    "import torch as tc\n",
+    "import torchvision as tv\n",
     "\n",
     "\n",
     "def unpack_drawing(file_handle):\n",
@@ -93,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,12 +108,10 @@
     "    # savedir_ext = \"//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png\"\n",
     "\n",
     "    # PC ONLY\n",
-    "    filedir = \"./quickdraw_dataset\"\n",
-    "    savedir = \"./quickdraw_dataset_pth\"\n",
+    "    filedir = \"./quickdraw_dataset_TESTING\"\n",
+    "    savedir = \"./quickdraw_dataset_pt\"\n",
     "\n",
-    "    # LAPTOP ONLY\n",
-    "    # filedir = \"E:\\Cempos python scripts\\Wonky-Doodles\\quickdraw_dataset_TESTING\"\n",
-    "    # savedir = \"E:\\Cempos python scripts\\Wonky-Doodles\\quickdraw_dataset_png\"\n",
+    "    filedir = \"./quickdraw_dataset_png\"\n",
     "\n",
     "    try: os.makedirs(savedir)\n",
     "    except: pass\n"
@@ -124,38 +125,7 @@
    "source": [
     "if __name__ == \"__main__\":\n",
     "\n",
-    "    ch = 'b'\n",
-    "    for root, dirs, files in os.walk(filedir):\n",
-    "        for file in files:\n",
-    "            \n",
-    "            filepath = os.path.join(root, file)\n",
-    "            label = file.replace('full_binary_', '').replace('.bin', '')\n",
-    "\n",
-    "            clear_output(wait=True)\n",
-    "            print(label)\n",
-    "            \n",
-    "            bin_to_img(filepath, f\"{savedir}\\{label}\\\\\")\n",
-    "            if label[0] == ch:\n",
-    "                ch = chr(ord(ch) + 1)\n",
-    "                if ch == 'g': break\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./quickdraw_dataset/full_binary_aircraft carrier.bin\n"
-     ]
-    }
-   ],
-   "source": [
-    "if __name__ == \"__main__\":\n",
+    "    limiter = 'b'\n",
     "    \n",
     "    ch = 'a'\n",
     "    files = os.listdir(filedir)\n",
@@ -164,16 +134,49 @@
     "        label = file.replace('full_binary_', '').replace('.bin', '')\n",
     "\n",
     "        if label[0] == ch:\n",
+    "            if ch == limiter: break\n",
     "            ch = chr(ord(ch) + 1)\n",
-    "            if ch == 'g': break\n",
     "\n",
     "        clear_output(wait=True)\n",
     "        print(label)\n",
     "\n",
-    "        bin_to_img(filepath, f\"{savedir}\\{label}\\\\\")\n",
+    "        bin_to_img(filepath, f\"{savedir}\\{label}\\\\\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == \"__main__\":\n",
     "\n",
-    "                \n",
-    "\n"
+    "    limiter_char = 'b'\n",
+    "    limiter_n_items_ratio = 1/6\n",
+    "    \n",
+    "    ch = 'a'\n",
+    "    dirs = os.listdir(filedir)\n",
+    "    for dir in dirs:\n",
+    "        if dir[0] == ch:\n",
+    "            if ch == limiter: break\n",
+    "            ch = chr(ord(ch)+1)\n",
+    "\n",
+    "        files = natsorted(os.listdir(f\"{filedir}/{dir}\"), alg=ns.IGNORECASE)\n",
+    "        files = files[:len(files)-1]\n",
+    "        n_files = limiter_n_items_ratio * len(files)\n",
+    "        \n",
+    "        clear_output(wait=True)\n",
+    "        print(dir)\n",
+    "\n",
+    "        try: os.makedirs(f\"{savedir}/{dir}\")\n",
+    "        except: pass\n",
+    "\n",
+    "        for idx, file in enumerate(files):\n",
+    "            if idx > n_files: break\n",
+    "\n",
+    "            filepath = f\"{filedir}/{dir}/{file}\"\n",
+    "            tensor = tv.transforms.ToTensor()(Image.open(filepath))\n",
+    "            tc.save(tensor, f\"{savedir}/{dir}/{file.replace('.png', '.pt')}\")"
    ]
   }
  ],
