changed structure to read/write dataset into/from C:. Also some minor changes.

--- a/binary_file_parser.ipynb
+++ b/binary_file_parser.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,10 +108,8 @@
     "    # savedir_ext = \"//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png\"\n",
     "\n",
     "    # PC ONLY\n",
-    "    filedir = \"./quickdraw_dataset_TESTING\"\n",
-    "    savedir = \"./quickdraw_dataset_pt\"\n",
-    "\n",
-    "    filedir = \"./quickdraw_dataset_png\"\n",
+    "    filedir = \"./quickdraw_dataset\"\n",
+    "    savedir = \"C:/WonkyDoodles/qd_png\"\n",
     "\n",
     "    try: os.makedirs(savedir)\n",
     "    except: pass\n"
@@ -125,10 +123,11 @@
    "source": [
     "if __name__ == \"__main__\":\n",
     "\n",
-    "    limiter = 'b'\n",
+    "    limiter = chr(ord('z') + 1) # <-- command for setting no limit\n",
     "    \n",
     "    ch = 'a'\n",
     "    files = os.listdir(filedir)\n",
+    "\n",
     "    for file in files:\n",
     "        filepath = f\"{filedir}/{file}\"\n",
     "        label = file.replace('full_binary_', '').replace('.bin', '')\n",
@@ -140,7 +139,8 @@
     "        clear_output(wait=True)\n",
     "        print(label)\n",
     "\n",
-    "        bin_to_img(filepath, f\"{savedir}\\{label}\\\\\")"
+    "        if not os.path.isdir(f\"{savedir}\\{label}\\\\\"):\n",
+    "            bin_to_img(filepath, f\"{savedir}\\{label}\\\\\")"
    ]
   },
   {
