--- a/create_address_txt.ipynb
+++ b/create_address_txt.ipynb
@@ -7,14 +7,14 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from itertools import islice\n",
+    "# from itertools import islice\n",
     "from IPython.display import clear_output\n",
     "from natsort import natsorted, ns\n",
     "\n",
-    "filedir = \"./quickdraw_dataset_png\"\n",
+    "filedir = \"C:/WonkyDoodles/qd_png\"\n",
     "# filedir = '//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png'\n",
     "\n",
-    "limit_ratio = 1/6\n"
+    "limit_ratio = 1/10\n"
    ]
   },
   {
@@ -29,11 +29,12 @@
     "    \n",
     "    files = natsorted(os.listdir(f\"{filedir}/{dir}\"), alg=ns.IGNORECASE)\n",
     "    dir_len = len(files)\n",
+    "    dir_len_limit = dir_len * limit_ratio\n",
     "    with open(f\"{filedir}/{dir}/address_list.txt\", 'w') as f:\n",
-    "        # f.write(f\"{filedir}/{dir}/{files[0]}\")\n",
     "        for idx, file in enumerate(files[:dir_len-1]):\n",
+    "            if idx > dir_len_limit: break\n",
     "            f.write(f\"{filedir}/{dir}/{file}\\n\")\n",
-    "            if idx > dir_len * limit_ratio: break"
+    "            "
    ]
   },
   {
@@ -48,7 +49,8 @@
     "    for dir in dirs:\n",
     "        with open(f\"{filedir}/{dir}/address_list.txt\") as g:\n",
     "            n_items += len(g.readlines())\n",
-    "            f.write(f\"{dir}_{n_items}\\n\")"
+    "            f.write(f\"{dir}_{n_items}\\n\")\n",
+    "            "
    ]
   }
  ],
