--- a/RecognitionNN.ipynb
+++ b/RecognitionNN.ipynb
@@ -41,12 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e29e1f0d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA is available: True\n",
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "### ALL THE IMPORTS ###\n",
     "#######################\n",
@@ -112,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b92c995c",
    "metadata": {},
    "outputs": [],
@@ -146,25 +155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3286de85",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample, label = quickdraw_dataset.__getitem__(45)\n",
-    "\n",
-    "topil = tv.transforms.ToPILImage()\n",
-    "img = topil(sample)\n",
-    "img.show()\n",
-    "print(quickdraw_dataset.label_list[np.argmax(label)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7c37846c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "##### DATALOADER #####\n",
     "###### - 0.2 - #######\n",
@@ -172,7 +174,7 @@
     "\n",
     "    # Shove both training and test lists into the dataloader.\n",
     "\n",
-    "    batch_size = 8                                                  # define batch_size\n",
+    "    batch_size = 32                                                 # define batch_size\n",
     "\n",
     "    batches_trn = DataLoader(dataset = quickdraw_trn,                    # samples input\n",
     "                        batch_size = batch_size,\n",
@@ -193,18 +195,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "569b82f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\cempos python scripts\\machine learning\\Doodles\\RecognitionNN_utils.py:122: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  return ((tc.tensor(input_dim) - tc.tensor(kernel_size) + 2*tc.tensor(padding)) / (tc.tensor(stride))) + 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "##### DEFINE MODEL ####\n",
     "######## - 1 - ########\n",
     "if __name__ == \"__main__\":\n",
     "\n",
     "    model = utils.ConvNN(quickdraw_trn.__getitem__(0)[0].shape,\n",
-    "                fc1_dim = 64,\n",
-    "                fc2_dim = 64,\n",
+    "                fc1_dim = int(32768/2/2),\n",
+    "                fc2_dim = int(16384/2/2),\n",
     "                output_dim = len(quickdraw_trn.label_list)\n",
     "                )\n",
     "\n",
@@ -233,10 +251,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "aa328f92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OutOfMemoryError",
+     "evalue": "CUDA out of memory. Tried to allocate 1.82 GiB (GPU 0; 6.00 GiB total capacity; 10.49 GiB already allocated; 0 bytes free; 10.51 GiB reserved in total by PyTorch) If reserved memory is >> allocated memory try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOutOfMemoryError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 18\u001b[0m\n\u001b[0;32m     13\u001b[0m     dir_counter \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     16\u001b[0m \u001b[39m# Training Loop. \u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[39m# Note that loading the batches into memory might take a few minutes. Take a look at your task manager.\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m model_trn \u001b[39m=\u001b[39m utils\u001b[39m.\u001b[39;49mtraining_loop(n_epochs \u001b[39m=\u001b[39;49m \u001b[39m2\u001b[39;49m,                             \u001b[39m# See func definition for input details\u001b[39;49;00m\n\u001b[0;32m     19\u001b[0m                         print_fps \u001b[39m=\u001b[39;49m \u001b[39m5.\u001b[39;49m,\n\u001b[0;32m     20\u001b[0m                         model \u001b[39m=\u001b[39;49m model,\n\u001b[0;32m     21\u001b[0m                         batches_trn \u001b[39m=\u001b[39;49m batches_trn,\n\u001b[0;32m     22\u001b[0m                         criterion \u001b[39m=\u001b[39;49m criterion,\n\u001b[0;32m     23\u001b[0m                         optimizer \u001b[39m=\u001b[39;49m optimizer,\n\u001b[0;32m     24\u001b[0m                         scheduler \u001b[39m=\u001b[39;49m step_lr_scheduler,\n\u001b[0;32m     25\u001b[0m                         tb_analytics \u001b[39m=\u001b[39;49m tb_analytics)\n",
+      "File \u001b[1;32md:\\cempos python scripts\\machine learning\\Doodles\\RecognitionNN_utils.py:276\u001b[0m, in \u001b[0;36mtraining_loop\u001b[1;34m(model, batches_trn, criterion, optimizer, scheduler, n_epochs, tb_analytics, print_fps)\u001b[0m\n\u001b[0;32m    274\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad()                                                   \u001b[39m# reset gradient calc\u001b[39;00m\n\u001b[0;32m    275\u001b[0m cost \u001b[39m=\u001b[39m criterion(output_prd, output_tru)                                \u001b[39m# calc cost value\u001b[39;00m\n\u001b[1;32m--> 276\u001b[0m cost\u001b[39m.\u001b[39;49mbackward()                                                         \u001b[39m# backward propagation\u001b[39;00m\n\u001b[0;32m    277\u001b[0m optimizer\u001b[39m.\u001b[39mstep()                                                        \u001b[39m# apply optimizer\u001b[39;00m\n\u001b[0;32m    279\u001b[0m \u001b[39m# Output Block\u001b[39;00m\n",
+      "File \u001b[1;32md:\\anaconda3\\envs\\MachineLearning\\lib\\site-packages\\torch\\_tensor.py:487\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    477\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[0;32m    478\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    479\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[0;32m    480\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    485\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[0;32m    486\u001b[0m     )\n\u001b[1;32m--> 487\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[0;32m    488\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[0;32m    489\u001b[0m )\n",
+      "File \u001b[1;32md:\\anaconda3\\envs\\MachineLearning\\lib\\site-packages\\torch\\autograd\\__init__.py:200\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    195\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[0;32m    197\u001b[0m \u001b[39m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[0;32m    198\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    199\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 200\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[0;32m    201\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[0;32m    202\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
+      "\u001b[1;31mOutOfMemoryError\u001b[0m: CUDA out of memory. Tried to allocate 1.82 GiB (GPU 0; 6.00 GiB total capacity; 10.49 GiB already allocated; 0 bytes free; 10.51 GiB reserved in total by PyTorch) If reserved memory is >> allocated memory try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF"
+     ]
+    }
+   ],
    "source": [
     "###### TRAINING #######\n",
     "######## - 3 - ########\n",
