--- a/create_address_txt.ipynb
+++ b/create_address_txt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,22 @@
     "filedir = \"C:/WonkyDoodles/qd_png\"\n",
     "# filedir = '//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png'\n",
     "\n",
-    "limit_ratio = 1/40\n"
+    "limit_ratio = 1/20\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zigzag\n"
+     ]
+    }
+   ],
    "source": [
     "for dir in os.listdir(filedir):\n",
     "    clear_output(wait=True)\n",
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
