--- a/doodle_draw.ipynb
+++ b/doodle_draw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
     "stroke_list = []\n",
     "\n",
     "filepath = './'\n",
-    "filename = \"Wonky_Doodles_CNN.pth\"\n",
+    "filename = \"Wonky_Doodles_CNN2_FFN3_lite40.pth\"\n",
     "model = tc.load(f\"{filepath}{filename}\").to(device)\n",
     "\n",
     "\n",
@@ -118,6 +118,7 @@
     "                line = map(lambda s: s.strip(), line)\n",
     "                return list(line)[0]\n",
     "    \n",
+    "    \n",
     "def eval_drawing(img, model):\n",
     "    with tc.no_grad():\n",
     "        # img = Image.open('canvas.png')\n",
@@ -128,24 +129,31 @@
     "        for idx, category in enumerate(otpt):\n",
     "            # print(f\"{get_category(idx, 'label_list.txt')} {100 * category:.2f} %\")\n",
     "            prob_list.append((get_category(idx, 'label_list.txt'), round(100 * category.item(), 2)))\n",
-    "            if idx > 9: break\n",
     "        prob_list.sort(key=lambda x: x[1], reverse=True)\n",
-    "        for category in prob_list:\n",
+    "        for idx, category in enumerate(prob_list):\n",
+    "            if idx > 9: break\n",
     "            print(f\"{category[0]}: {category[1]} %\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aircraft carrier: 90.49 %\n",
-      "banana: 4.85 %\n",
-      "bandage: 4.66 %\n"
+      "fireplace_2984237: 29.0 %\n",
+      "traffic light_8596950: 18.86 %\n",
+      "skyscraper_7148346: 10.34 %\n",
+      "remote control_6541443: 8.12 %\n",
+      "cell phone_1720686: 7.7 %\n",
+      "telephone_8185619: 6.41 %\n",
+      "blackberry_868978: 2.38 %\n",
+      "goatee_3443054: 2.36 %\n",
+      "hospital_3989320: 2.29 %\n",
+      "power outlet_6346109: 1.77 %\n"
      ]
     }
    ],
