Trained lite 20 model (very bad) create_address_txt. ipynb: prepared to train lite 10 model bin_file_parser.ipynb: prepared for parsing to E:

--- a/binary_file_parser.ipynb
+++ b/binary_file_parser.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "    # PC ONLY\n",
     "    filedir = \"./quickdraw_dataset\"\n",
-    "    savedir = \"C:/WonkyDoodles/qd_png\"\n",
+    "    savedir = \"E:/WonkyDoodles/qd_png\"\n",
     "\n",
     "    try: os.makedirs(savedir)\n",
     "    except: pass\n"
