Finally trained a reasonbly working model

--- a/doodle_draw.ipynb
+++ b/doodle_draw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
     "stroke_list = []\n",
     "\n",
     "filepath = './'\n",
-    "filename = \"Wonky_Doodles_CNN2_FFN3_lite40.pth\"\n",
+    "filename = \"Wonky_Doodles_CNN2_FFN3_liteXX.pth\"\n",
     "model = tc.load(f\"{filepath}{filename}\").to(device)\n",
     "\n",
     "\n",
@@ -137,23 +137,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fireplace_2984237: 29.0 %\n",
-      "traffic light_8596950: 18.86 %\n",
-      "skyscraper_7148346: 10.34 %\n",
-      "remote control_6541443: 8.12 %\n",
-      "cell phone_1720686: 7.7 %\n",
-      "telephone_8185619: 6.41 %\n",
-      "blackberry_868978: 2.38 %\n",
-      "goatee_3443054: 2.36 %\n",
-      "hospital_3989320: 2.29 %\n",
-      "power outlet_6346109: 1.77 %\n"
+      "mouse_2589659: 57.16 %\n",
+      "cannon_775721: 3.64 %\n",
+      "syringe_4029660: 2.53 %\n",
+      "frog_1655224: 1.89 %\n",
+      "see saw_3456270: 1.76 %\n",
+      "bracelet_506743: 1.58 %\n",
+      "dog_1206699: 1.36 %\n",
+      "garden hose_1692499: 1.09 %\n",
+      "pig_3016645: 1.04 %\n",
+      "lobster_2382392: 0.99 %\n"
      ]
     }
    ],
